# web-demo

./: .gitignore  README.md  build.sh  live-reload.py  pyproject.toml  shell.nix
backend/web/: __init__.py  __main__.py  server.py
backend/web/hypertext/: README.md  __init__.py  helpers.py
frontend/: bundle.js  eslint.config.cjs  package.json  pnpm-lock.yaml
frontend/css/: main.css
frontend/css/settings/: fonts.css
frontend/css/utilities/: debug-outline.css
frontend/vanillajs/: index.js
